--- a/index.html
+++ b/index.html
@@ -1,35 +1,17 @@
 <!DOCTYPE html>
 
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
 
- 
-
-<head>
-
-    <meta charset="UTF-8">
-
-    <title>JavaScript Intro</title>
+    <title>계산기
+        
+    </title>
 
     <script>
 
-        document.write("<h2>여러분을 환영합니다!!</h2>")
-
     </script>
+  </head>
 
-</head>
-
- 
-
-<body>
-
-    <noscript>
-
-        <p>여러분의 웹 브라우저가 자바스크립트를 지원하지 않습니다!</p>
-
-    </noscript>
-
-</body>
-
- 
-
+  <body></body>
 </html>
